[gd_scene load_steps=4 format=3 uid="uid://c1g5mhypd7tna"]

[ext_resource type="Script" path="res://Scripts/MenuOptions.gd" id="1_lxsq5"]
[ext_resource type="Theme" uid="uid://fjn5vqo0plgq" path="res://Scenes/Menu/MyTheme.tres" id="1_v3rm4"]
[ext_resource type="PackedScene" uid="uid://c5pohpd14i8bx" path="res://Scenes/Menu/MyButton.tscn" id="2_r1w8y"]

[node name="Options" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lxsq5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v3rm4")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.5
offset_top = -240.5
offset_right = 267.5
offset_bottom = 236.5
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.5
offset_top = 17.5
offset_right = 42.5
offset_bottom = 43.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1

[node name="Close" parent="Control/Panel" instance=ExtResource("2_r1w8y")]
layout_mode = 2
offset_left = 23.0
offset_top = 19.0
offset_right = 53.0
offset_bottom = 56.0
text = "X"

[node name="Reset" parent="Control/Panel" instance=ExtResource("2_r1w8y")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -151.5
offset_top = -54.5
offset_right = -24.5
offset_bottom = -18.5
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -110.0
offset_right = 151.0
offset_bottom = -13.0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Main Menu" parent="Control/Panel/VBoxContainer2" instance=ExtResource("2_r1w8y")]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="Quit" parent="Control/Panel/VBoxContainer2" instance=ExtResource("2_r1w8y")]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.0
offset_top = 80.5
offset_right = 149.0
offset_bottom = 327.5
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="Fullscreen" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/Fullscreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscreen"

[node name="Control" type="Control" parent="Control/Panel/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MyButton" parent="Control/Panel/VBoxContainer/Fullscreen" instance=ExtResource("2_r1w8y")]
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "       "

[node name="Master" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/Master"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Master Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/Master"]
layout_mode = 2
step = 5.0
value = 25.0

[node name="Sound" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/Sound"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sound Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/Sound"]
layout_mode = 2
step = 5.0
value = 25.0

[node name="Music" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/Music"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/Music"]
layout_mode = 2
step = 5.0
value = 25.0

[connection signal="pressed" from="Control/Panel/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Control/Panel/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer2/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Fullscreen/MyButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="value_changed" from="Control/Panel/VBoxContainer/Master/HSlider" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Control/Panel/VBoxContainer/Sound/HSlider" to="." method="_on_sound_value_changed"]
[connection signal="value_changed" from="Control/Panel/VBoxContainer/Music/HSlider" to="." method="_on_music_value_changed"]
